# odoo-bringout-l10n_ba_nabavke_objekat

./: README.md  pyproject.toml
doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
l10n_ba_nabavke_objekat/: README.rst  __manifest__.py
l10n_ba_nabavke_objekat/input/: reports.xml  stock_picking_tree.xml  template_2.xml  template_report_purchaseorder_document.xml
l10n_ba_nabavke_objekat/models/: __init__.py  purchase_order.py  purchase_order_line.py  stock_picking.py
l10n_ba_nabavke_objekat/views/: report_purchaseorder_document_view.xml  stock_picking_list.xml  stock_picking_view.xml
